--- a/HtmlBuilder.Test/HtmlBuilder.Test.csproj
+++ b/HtmlBuilder.Test/HtmlBuilder.Test.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <AssemblyName>Maroontress.HtmlBuilder.Test</AssemblyName>
     <RootNamespace>Maroontress.HtmlBuilder.Test</RootNamespace>
-    <LangVersion>10</LangVersion>
+    <LangVersion>13</LangVersion>
     <Nullable>enable</Nullable>
     <DocumentationFile>dcx\Maroontress.HtmlBuilder.Test.xml</DocumentationFile>
   </PropertyGroup>
@@ -27,13 +27,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="3.1.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="ReportGenerator" Version="5.1.9" />
-    <PackageReference Include="StyleChecker" Version="1.0.27" PrivateAsssets="all" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAsssets="all">
+    <PackageReference Include="coverlet.collector" Version="6.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.7.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.7.0" />
+    <PackageReference Include="ReportGenerator" Version="5.4.3" />
+    <PackageReference Include="StyleChecker" Version="2.0.2-beta" PrivateAsssets="all">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556" PrivateAsssets="all">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
